--- a/html-feladatok-bemutatkozo/About.html
+++ b/html-feladatok-bemutatkozo/About.html
@@ -33,7 +33,7 @@
     <table style="width: 100%; background-color:black; margin-top:5em; border:0px">
         <tr>
             <td style="width:45%">
-                <img src="/img/about.jpg" width="100%" alt="Elon is disappointed">
+                <img src="./img/about.jpg" width="100%" alt="Elon is disappointed">
             </td>
             <td style="width:55%; color: aliceblue;">
                     <p><strong>Elons Reeve Musk </strong>FRS (born June 28, 1971) is an entrepreneur and business magnate. He is the founder, CEO, and Chief Engineer at SpaceX; early stage investor, CEO, and Product Architect of Tesla, Inc.; founder of The Boring Company; and co-founder of Neuralink and OpenAI. A centibillionaire, Musk is the richest person in the world as of September 2021.Musk was born to a Canadian mother and South African father and raised in Pretoria, South Africa. He briefly attended the University of Pretoria before moving to Canada aged 17 to attend Queen's University. He moved to California in 1995 to attend Stanford University but decided instead to pursue a business career, co-founding the web software company Zip2 with brother Kimbal. The same year, Musk co-founded online bank X.com, which merged with Confinity in 2000 to form PayPal. The company was bought by eBay in 2002 for $1.5 billion.</p>
