--- a/html-feladatok-bemutatkozo/Gallery.html
+++ b/html-feladatok-bemutatkozo/Gallery.html
@@ -30,64 +30,64 @@
 
         <section class="grid-container" style="position: absolute; margin: 0 auto;">
             <div class="imgbox">
-                <img src="/img/gallery/1.jpg" width=100%; height="100%" alt="Elon1">
+                <img src="./img/gallery/1.jpg" width=100%; height="100%" alt="Elon1">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/2.png" width=100%; height="100%" alt="Elon2">
+                <img src="./img/gallery/2.png" width=100%; height="100%" alt="Elon2">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/3.jpg" width=100%; height="100%" alt="Elon3">
+                <img src="./img/gallery/3.jpg" width=100%; height="100%" alt="Elon3">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/4.jpg" width=100%; height="100%" alt="Elon4">
+                <img src="./img/gallery/4.jpg" width=100%; height="100%" alt="Elon4">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/5.jpg" width=100%; height="100%" alt="Elon5">
+                <img src="./img/gallery/5.jpg" width=100%; height="100%" alt="Elon5">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/6.jpg" width=100%; height="100%" alt="Elon6">
+                <img src="./img/gallery/6.jpg" width=100%; height="100%" alt="Elon6">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/7.jpg" width=100%; height="100%" alt="Elon7">
+                <img src="./img/gallery/7.jpg" width=100%; height="100%" alt="Elon7">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/8.jpeg" width=100%; height="100%" alt="Elon8">
+                <img src="./img/gallery/8.jpeg" width=100%; height="100%" alt="Elon8">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/9.jpg" width=100%; height="100%" alt="Elon9">
+                <img src="./img/gallery/9.jpg" width=100%; height="100%" alt="Elon9">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/10.jpeg" width=100%; height="100%" alt="SpaceX1">
+                <img src="./img/gallery/10.jpeg" width=100%; height="100%" alt="SpaceX1">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/11.jpg" width=100%; height="100%" alt="SpaceX2">
+                <img src="./img/gallery/11.jpg" width=100%; height="100%" alt="SpaceX2">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/12.jpg" width=100%; height="100%" alt="SpaceX3">
+                <img src="./img/gallery/12.jpg" width=100%; height="100%" alt="SpaceX3">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/13.jpg" width=100%; height="100%" alt="SpaceX4">
+                <img src="./img/gallery/13.jpg" width=100%; height="100%" alt="SpaceX4">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/14.jpg" width=100%; height="100%" alt="SpaceX5">
+                <img src="./img/gallery/14.jpg" width=100%; height="100%" alt="SpaceX5">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/15.jpg" width=100%; height="100%" alt="SpaceX6">
+                <img src="./img/gallery/15.jpg" width=100%; height="100%" alt="SpaceX6">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/16.jpg" width=100%; height="100%" alt="Tesla1">
+                <img src="./img/gallery/16.jpg" width=100%; height="100%" alt="Tesla1">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/17.jpg" width=100%; height="100%" alt="Tesla2">
+                <img src="./img/gallery/17.jpg" width=100%; height="100%" alt="Tesla2">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/18.jpg" width=100%; height="100%" alt="Tesla3">
+                <img src="./img/gallery/18.jpg" width=100%; height="100%" alt="Tesla3">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/19.jpg" width=100%; height="100%" alt="Tesla4">
+                <img src="./img/gallery/19.jpg" width=100%; height="100%" alt="Tesla4">
             </div>
             <div class="imgbox">
-                <img src="/img/gallery/20.jpg" width=100%; height="100%" alt="Tesla5">
+                <img src="./img/gallery/20.jpg" width=100%; height="100%" alt="Tesla5">
             </div>
         </section>
             
