--- a/html-feladatok-bemutatkozo/About.html
+++ b/html-feladatok-bemutatkozo/About.html
@@ -16,7 +16,7 @@
             background-size: cover;">
     <header id="header" class="logo">
         <a style="padding:0px; float:left">Contact</a>
-        <a href="./home.html">
+        <a href="./index.html">
             Home
         </a>
         <a href="./works.html">
@@ -101,7 +101,7 @@
                         </button>
                         <Ul style="padding-left: 5em;">
                             <li>
-                                <a style="padding:0px" href="./home.html">Home</a>
+                                <a style="padding:0px" href="./index.html">Home</a>
                             </li>
                             <li>
                                 <a style="padding:0px" href="./works.html">Works</a>
