--- a/html-feladatok-bemutatkozo/Gallery.html
+++ b/html-feladatok-bemutatkozo/Gallery.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header" class="logo">
         <a style="padding:0px; float:left">Photos</a>
-        <a href="./home.html">
+        <a href="./index.html">
             Home
         </a>
         <a href="./works.html">
@@ -99,7 +99,7 @@
                         </button>
                         <Ul style="padding-left: 5em;">
                             <li>
-                                <a style="padding:0px" href="./home.html">Home</a>
+                                <a style="padding:0px" href="./index.html">Home</a>
                             </li>
                             <li>
                                 <a style="padding:0px" href="./works.html">Works</a>
