--- a/scss-feladatok-sitebuilding/index.html
+++ b/scss-feladatok-sitebuilding/index.html
@@ -24,25 +24,25 @@
     <section id="new-age">
 
       <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-none mx-auto fixed-top py-3 py-lg-2">
-          <a class="navbar-brand catamaran ml-5 pl-lg-5" href="./index.html#new-age">Start Bootstrap</a>
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+          <a class="navbar-brand catamaran" href="./index.html#new-age">Start Bootstrap</a>
 
-          <button class="navbar-toggler mr-5 mr-lg-0" type="button" data-toggle="collapse" data-target="#hamburgerMenu"
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#hamburgerMenu"
             aria-controls="hamburgerMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="muli text-dark font-weight-bold">Menu</span>
+            <span class="muli">Menu</span>
             <span class="navbar-toggler-icon text-body"></span>
           </button>
 
-          <div class="collapse navbar-collapse justify-content-end" id="hamburgerMenu">
-            <ul class="navbar-nav text-right small font-weight-bold mr-lg-5 pr-lg-5">
+          <div class="collapse navbar-collapse" id="hamburgerMenu">
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link lato pr-5 pr-lg-0" href="./index.html#download">DOWNLOAD</a>
+                <a class="nav-link lato link-1" href="./index.html#download">DOWNLOAD</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link lato pr-5 pr-lg-1" href="./index.html#features">FEATURES</a>
+                <a class="nav-link lato link-2" href="./index.html#features">FEATURES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link lato pr-5 pr-lg-1" href="./index.html#contact">CONTACT</a>
+                <a class="nav-link lato link-3" href="./index.html#contact">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -50,17 +50,17 @@
       </div>
 
       <div id="new-age-content" class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-5 mr-lg-5 pt-lg-5 mt-lg-4">
-            <h1 class="catamaran text-white">
+        <div class="row">
+          <div class="col-lg-5">
+            <h1 class="catamaran">
               New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything
               else!
             </h1>
-            <a class="btn btn-outline-light rounded-pill lato mt-5 mt-lg-4 mb-5 mb-lg-0" href="">
-              <span class="small">START NOW FOR FREE!</span></a>
+            <a class="main-button lato" href="">
+              <span>START NOW FOR FREE!</span></a>
           </div>
 
-          <div class="col-lg-4 ml-lg-5 pl-lg-5 mt-5 mt-lg-0">
+          <div class="col-lg-4">
             <img src="./assets/img/phone.png" alt="phone" id="phone">
             <img src="./assets/img/demo-screen-1.jpg" alt="demo-screen" id="phone-screen">
           </div>
@@ -178,7 +178,7 @@
               Stop waiting. <br>
               Start building.
             </h1>
-            <a class="btn btn-outline-light rounded-pill lato mt-3 mt-lg-4" href="">
+            <a class="main-button lato mt-3 mt-lg-4" href="">
               <span class="small">LET'S GET STARTED!</span></a>
           </div>
         </div>
