--- a/scss-feladatok-sitebuilding/index.html
+++ b/scss-feladatok-sitebuilding/index.html
@@ -25,24 +25,24 @@
 
       <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-          <a class="navbar-brand catamaran" href="./index.html#new-age">Start Bootstrap</a>
+          <a class="navbar-brand margin-left-6 padding-left-6 Catamaran" href="./index.html#new-age">Start Bootstrap</a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#hamburgerMenu"
             aria-controls="hamburgerMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="muli">Menu</span>
+            <span class="Muli">Menu</span>
             <span class="navbar-toggler-icon text-body"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="hamburgerMenu">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link lato link-1" href="./index.html#download">DOWNLOAD</a>
+                <a class="nav-link Lato link-1" href="./index.html#download">DOWNLOAD</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link lato link-2" href="./index.html#features">FEATURES</a>
+                <a class="nav-link Lato link-2" href="./index.html#features">FEATURES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link lato link-3" href="./index.html#contact">CONTACT</a>
+                <a class="nav-link Lato link-3" href="./index.html#contact">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -52,11 +52,11 @@
       <div id="new-age-content" class="container">
         <div class="row">
           <div class="col-lg-5">
-            <h1 class="catamaran">
+            <h1 class="Catamaran">
               New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything
               else!
             </h1>
-            <a class="main-button lato" href="">
+            <a class="main-button Lato" href="">
               <span>START NOW FOR FREE!</span></a>
           </div>
 
@@ -70,13 +70,13 @@
 
     <!-- Download -->
     <section id="download">
-      <div class="container h-100 d-flex flex-column text-center ">
-        <div class="my-auto">
-          <h1 class="display-3 catamaran">Discover what all the<br>
+      <div class="container">
+        <div>
+          <h1 class="Catamaran">Discover what all the<br>
             buzz is about!</h1>
-          <p class="lead muli">Our app is available on any mobile device! Download now to get started!</p>
-          <div class="row flex-column flex-lg-row justify-content-center">
-            <div class="mr-lg-1 mb-4 mb-lg-0">
+          <p class="Muli">Our app is available on any mobile device! Download now to get started!</p>
+          <div class="row">
+            <div>
               <a href="https://www.apple.com/hu/app-store/">
                 <img src="./assets/img/google-play-badge.svg" alt="Google Store">
               </a>
@@ -94,19 +94,19 @@
     <!-- Features-->
     <section id="features">
 
-      <div class="container text-center">
+      <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1 class="catamaran mt-5 pt-5">Unlimited Features, Unlimited Fun</h1>
-            <p class="muli text-muted">Check out what you can do with this app theme!</p>
+            <h1 class="Catamaran margin-top-6 padding-top-6">Unlimited Features, Unlimited Fun</h1>
+            <p class="Muli">Check out what you can do with this app theme!</p>
             <div class="col-3 col-lg-1 mx-auto">
-              <div role="separator" class="dropdown-divider mt-4"></div>
+              <div role="separator" class="dropdown-divider margin-top-5"></div>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container mt-5 pt-5 text-center">
+      <div class="container margin-top-6 padding-top-6">
         <div class="row">
           <div class="col-lg-1"></div>
           <div class="col-12 col-lg-3">
@@ -115,52 +115,56 @@
           </div>
 
           <div class="col-lg-8">
-            <div class="row mt-lg-3">
-              <div class="col-lg-1"></div>
-              <div class="col-8 col-lg-5 mt-lg-5 mx-auto">
-                <!-- <i class="fa fa-mobile fa-5x fa-fw mr-4" aria-hidden="true" height="500px"></i> -->
-                <!-- <span style="">📱</span> -->
-                <!-- <i class="">&#128241</i> -->
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" height="5em" fill="rgb(178,50,93)" class="bi bi-phone" viewBox="0 0 16 16">
+            <div id="features-content">
+
+              <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-8 col-lg-5 mx-auto">
+                  <!-- <i class="fa fa-mobile fa-5x fa-fw mr-4" aria-hidden="true" height="500px"></i> -->
+                  <!-- <span style="">📱</span> -->
+                  <!-- <i class="">&#128241</i> -->
+                  <!-- <svg xmlns="http://www.w3.org/2000/svg" height="5em" fill="rgb(178,50,93)" class="bi bi-phone" viewBox="0 0 16 16">
                   <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
                   <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
                 </svg> -->
-                <div class="iconDiv">
-                  <i class="simple-line-icon icon-screen-smartphone icon featureBorder"></i>
+                  <div class="iconDiv">
+                    <i class="simple-line-icon icon-screen-smartphone icon"></i>
+                  </div>
+                  <h3 class="Catamaran">Device Mockups</h3>
+                  <p class="Muli">Ready to use HTML/CSS device
+                    mockups, no Photoshop required!</p>
                 </div>
-                <h3 class="catamaran mt-3 mb-2">Device Mockups</h3>
-                <p class="muli text-muted">Ready to use HTML/CSS device
-                  mockups, no Photoshop required!</p>
-              </div>
-              <div class="col-8 col-lg-5 mt-lg-5 mx-auto">
-                <div class="iconDiv">
-                  <i class="simple-line-icon icon-camera icon"></i>
+                <div class="col-8 col-lg-5 mx-auto">
+                  <div class="iconDiv">
+                    <i class="simple-line-icon icon-camera icon"></i>
+                  </div>
+                  <h3 class="Catamaran">Flexible Use</h3>
+                  <p class="Muli">Put an image, video, animation, or
+                    anything else in the screen!</p>
                 </div>
-                <h3 class="catamaran mt-lg-3 mb-lg-2">Flexible Use</h3>
-                <p class="muli text-muted">Put an image, video, animation, or
-                  anything else in the screen!</p>
+                <div class="col-lg-1"></div>
               </div>
-              <div class="col-lg-1"></div>
-            </div>
-            <div class="row mt-lg-3">
-              <div class="col-lg-1"></div>
-              <div class="col-8 col-lg-5 mt-lg-5 mx-auto">
-                <div class="iconDiv">
-                  <i class="simple-line-icon icon-present icon"></i>
+              <div class="row">
+                <div class="col-lg-1"></div>
+                <div class="col-8 col-lg-5 mx-auto">
+                  <div class="iconDiv">
+                    <i class="simple-line-icon icon-present icon"></i>
+                  </div>
+                  <h3 class="Catamaran">Free to Use</h3>
+                  <p class="Muli">As always, this theme is free to
+                    download and use for any purpose!</p>
                 </div>
-                <h3 class="catamaran mt-lg-3 mb-lg-2">Free to Use</h3>
-                <p class="muli text-muted">As always, this theme is free to
-                  download and use for any purpose!</p>
-              </div>
-              <div class="col-8 col-lg-5 mt-lg-5 mx-auto">
-                <div class="iconDiv">
-                  <i class="simple-line-icon icon-lock-open icon"></i>
+                <div class="col-8 col-lg-5 mx-auto">
+                  <div class="iconDiv">
+                    <i class="simple-line-icon icon-lock-open icon"></i>
+                  </div>
+                  <h3 class="Catamaran">Open Source</h3>
+                  <p class="Muli">Since this theme is MIT licensed, you
+                    can use it commercially!</p>
                 </div>
-                <h3 class="catamaran mt-lg-3 mb-lg-2">Open Source</h3>
-                <p class="muli text-muted">Since this theme is MIT licensed, you
-                  can use it commercially!</p>
+                <div class="col-lg-1"></div>
               </div>
-              <div class="col-lg-1"></div>
+
             </div>
           </div>
 
@@ -170,16 +174,16 @@
 
     <!-- StopWaiting -->
 
-    <section id="stopWaiting" class="min-vw-100">
-      <div class="container h-100">
-        <div class="row h-100">
-          <div class="col-lg-12 my-auto  ml-lg-5 pl-lg-5">
-            <h1 class="catamaran text-white">
+    <section id="stopWaiting">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <h1 class="Catamaran">
               Stop waiting. <br>
               Start building.
             </h1>
-            <a class="main-button lato mt-3 mt-lg-4" href="">
-              <span class="small">LET'S GET STARTED!</span></a>
+            <a class="main-button Lato" href="">
+              <span>LET'S GET STARTED!</span></a>
           </div>
         </div>
       </div>
@@ -188,24 +192,24 @@
     <!-- Contact -->
 
     <section id="contact">
-      <div class="container text-center h-100">
-        <div class="row justify-content-center h-100">
-          <div class="col-12 catamaran my-auto">
-            <h1>We <span style="color: rgb(221,76,57);">&#10084;</span> new friends!</h1>
-            <div class="row justify-content-center h-100 mt-5 mt-lg-0">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 Catamaran">
+            <h1>We <span class="heart">&#10084;</span> new friends!</h1>
+            <div class="social row">
 
-              <nav class="mt-lg-4">
-                <a class="twitter text-white mr-3 mr-lg-2" href="https://twitter.com/" data-toggle="tooltip"
+              <nav>
+                <a class="twitter" href="https://twitter.com/" data-toggle="tooltip"
                   data-placement="top" title="Twitter">
                   <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
                   <span class="sr-only">Az alkalmazás Twitter oldala</span>
                 </a>
-                <a class="facebook text-white mr-3 mr-lg-2" href="https://www.facebook.com/" data-toggle="tooltip"
+                <a class="facebook" href="https://www.facebook.com/" data-toggle="tooltip"
                   data-placement="top" title="Facebook">
                   <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
                   <span class="sr-only">Az alkalmazás Facebook oldala</span>
                 </a>
-                <a class="gmail text-white" href="mailto:contact@newage.com" data-toggle="tooltip" data-placement="top"
+                <a class="gmail" href="mailto:contact@newage.com" data-toggle="tooltip" data-placement="top"
                   title="Gmail">
                   <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
                   <span class="sr-only">Küldj üzenetet gmail-en!</span>
@@ -222,14 +226,14 @@
 
   <!-- Footer -->
 
-  <footer class="muli text-white text-center text-muted">
-    <div class="container h-100">
-      <div class="row h-100 justify-content-center">
-        <div class="my-auto">
+  <footer class="Muli">
+    <div class="container">
+      <div class="row">
+        <div>
           <small>© Your Website 2021. All Rights Reserved</small>
-          <div class="small pt-2 pt-lg-1">
-            <span class="mr-2" data-toggle="modal" data-target="#privacyModal" data-whatever="@privacy">Privacy</span>
-            <span class="mr-2" data-toggle="modal" data-target="#termsModal">Terms</span>
+          <div class="small">
+            <span class="margin-right-3" data-toggle="modal" data-target="#privacyModal" data-whatever="@privacy">Privacy</span>
+            <span class="margin-right-3" data-toggle="modal" data-target="#termsModal">Terms</span>
             <span data-toggle="modal" data-target="#faqModal">FAQ</span>
           </div>
         </div>
