extra - fetch and promise done

--- a/extra-feladatok-fetch/index.html
+++ b/extra-feladatok-fetch/index.html
@@ -9,13 +9,17 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
     </style>
-    <title>Fetach and Promise - Extra project</title>
+    <title>Fetch and Promise - Extra project</title>
 </head>
 
 <body>
 
     <div class="content">
-        <div class="flag"></div>
+        <div class="flag">
+            <video width="320" height="240" autoplay loop>
+                <source src="./assets/img/hungarian_flag.mp4" type="video/mp4">
+              </video>
+        </div>
         <div class="team"></div>
         <div class="players"></div>
     </div>
